# feather51

./: .gitignore  LICENSE  NOTICE  README.md  TODO.md
blinky/: .gitignore  Makefile  blinky.a51  blinky.asm  efm8ub1.a51
efm8flash/: .gitignore  LICENSE  Makefile.am  Makefile.in  README.md  configure  configure.ac  crc16.h  efm8flash.c
efm8flash/autom4te.cache/: output.0  requests  traces.0  traces.1
efm8flash/tests/: check_crc16.c
feather51/: feather51-cache.lib  feather51.bak  feather51.csv  feather51.kicad_pcb  feather51.kicad_pcb-bak  feather51.net  feather51.pro  feather51.sch  feather51.xml
feather51/gerber/: feather51-B.Cu.gbl  feather51-B.Fab.gbr  feather51-B.Mask.gbs  feather51-B.SilkS.gbo  feather51-Edge.Cuts.gm1  feather51-F.Cu.gtl  feather51-F.Fab.gbr  feather51-F.Mask.gts  feather51-F.SilkS.gto  feather51.drl
jlink-c2d-adapter/: .gitignore  jlink-c2d-adapter-cache.lib  jlink-c2d-adapter.kicad_pcb  jlink-c2d-adapter.net  jlink-c2d-adapter.sch
jlink-c2d-adapter/gerbers/: jlink-c2d-adapter-B.Cu.gbl  jlink-c2d-adapter-B.Mask.gbs  jlink-c2d-adapter-B.Paste.gbp  jlink-c2d-adapter-B.SilkS.gbo  jlink-c2d-adapter-Edge.Cuts.gm1  jlink-c2d-adapter-F.Cu.gtl  jlink-c2d-adapter-F.Mask.gts  jlink-c2d-adapter-F.Paste.gtp  jlink-c2d-adapter-F.SilkS.gto  jlink-c2d-adapter.drl
motortest/: .motortest.sym.swp  Makefile  motortest.a51
